examples/valid/template_reference_as_http_verb.reqlang
```%config
[prompts]
header = ""
```

```%request
GET https://example.com HTTP/1.1
{{?header}}: 123
```