examples/invalid/invalid_config.reqlang
```%config
/123=123
```

```%request
GET http://example.com HTTP/1.1
```
